Turn on additional logging
And force eureka to use IPs

--- a/application.yml
+++ b/application.yml
@@ -1,4 +1,6 @@
 eureka:
+  instance:
+    preferIpAddress: true
   client:
     serviceUrl:
       defaultZone: http://spring-cloud-workshop-service-discovery:8761/eureka/
